--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -2339,6 +2339,121 @@
     "\n",
     "cursor.close(); con.close()  # close"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    bummer, only got 1/2 way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>subcategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7695</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>2535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7696</th>\n",
+       "      <td>2535</td>\n",
+       "      <td>2565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7697</th>\n",
+       "      <td>2565</td>\n",
+       "      <td>2568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7698</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>2535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7699</th>\n",
+       "      <td>2535</td>\n",
+       "      <td>2565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7700</th>\n",
+       "      <td>2565</td>\n",
+       "      <td>2569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7701</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>2535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7702</th>\n",
+       "      <td>2535</td>\n",
+       "      <td>2565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7703</th>\n",
+       "      <td>2565</td>\n",
+       "      <td>2570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7704</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>2535</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      category  subcategory\n",
+       "7695        -1         2535\n",
+       "7696      2535         2565\n",
+       "7697      2565         2568\n",
+       "7698        -1         2535\n",
+       "7699      2535         2565\n",
+       "7700      2565         2569\n",
+       "7701        -1         2535\n",
+       "7702      2535         2565\n",
+       "7703      2565         2570\n",
+       "7704        -1         2535"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfInt.iloc[7695:7705]"
+   ]
   }
  ],
  "metadata": {
