--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -2454,6 +2454,17 @@
    "source": [
     "dfInt.iloc[7695:7705]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    After using the notebook for uploading in 2 halves:\n",
+    "    \n",
+    "    \"it seems any possible number in front of 7700 will hurt the code, I will inspect in the notebook\"\n",
+    "    \n",
+    "    it looks like any entry post 7700 has issues, lets see if this comes from the index"
+   ]
   }
  ],
  "metadata": {
