split method skeleton

--- a/db upload/tree upload/Tree upload NB.ipynb
+++ b/db upload/tree upload/Tree upload NB.ipynb
@@ -2465,6 +2465,17 @@
     "    \n",
     "    it looks like any entry post 7700 has issues, lets see if this comes from the index"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df2 = df.iloc[7700:15400].reset_index(drop=True)\n",
+    "\n",
+    "# print(df2.head())"
+   ]
   }
  ],
  "metadata": {
