--- a/db upload/Map upload/DataBase upload NB loss tracking.ipynb
+++ b/db upload/Map upload/DataBase upload NB loss tracking.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,9 +105,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "100 number  1  done\n",
+      "1\n",
+      "100 number  2  done\n",
+      "0\n",
+      "100 number  3  done\n",
+      "Error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      " q: ('INSERT INTO \"Categories\" (category_id, category) VALUES (%s, %s)', ('341', 'Automobiles & Motorcycle s'))\n",
+      "2\n",
+      "100 number  4  done\n",
+      "0\n",
+      "100 number  5  done\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# listOfCollisions = []\n",
@@ -143,13 +162,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['(\\'INSERT INTO \"Categories\" (category_id, category) VALUES (%s, %s)\\', (\\'151\\', nan))',\n",
+       " '(\\'INSERT INTO \"Categories\" (category_id, category) VALUES (%s, %s)\\', (\\'340\\', nan))',\n",
+       " '(\\'INSERT INTO \"Categories\" (category_id, category) VALUES (%s, %s)\\', (\\'341\\', \\'Automobiles & Motorcycle s\\'))']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "print(len(queryList))\n",
-    "print(queryList)"
+    "queryList"
    ]
   }
  ],
