--- a/db upload/Map upload/DataBase upload NB loss tracking.ipynb
+++ b/db upload/Map upload/DataBase upload NB loss tracking.ipynb
@@ -190,6 +190,145 @@
     "print(len(queryList))\n",
     "queryList"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Now, lets take a look at the data base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ser</th>\n",
+       "      <th>cat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Agriculture</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Agricultural Greenhouses</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Aquaculture Trap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475</th>\n",
+       "      <td>496</td>\n",
+       "      <td>Motorcycle Valve Train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>497</td>\n",
+       "      <td>Other Motorcycle Engines</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>498</td>\n",
+       "      <td>Motorcycle Steering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>499</td>\n",
+       "      <td>Motorcycle Tires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>479</th>\n",
+       "      <td>500</td>\n",
+       "      <td>Motorcycle Transmissions</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>480 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ser                       cat\n",
+       "0      1               Agriculture\n",
+       "1      2    Agricultural Equipment\n",
+       "2      3  Agricultural Greenhouses\n",
+       "3      4     Aquaculture Equipment\n",
+       "4      5          Aquaculture Trap\n",
+       "..   ...                       ...\n",
+       "475  496    Motorcycle Valve Train\n",
+       "476  497  Other Motorcycle Engines\n",
+       "477  498       Motorcycle Steering\n",
+       "478  499          Motorcycle Tires\n",
+       "479  500  Motorcycle Transmissions\n",
+       "\n",
+       "[480 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "con = psycopg2.connect(\n",
+    "    database=\"iSupply\",\n",
+    "    host=\"38.180.117.52\",\n",
+    "    user=\"postgres\",\n",
+    "    password=\"deerRun\",\n",
+    "    port=\"5432\",\n",
+    ")\n",
+    "cursor = con.cursor()\n",
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "out = cursor.fetchall()  # make a dictionary of what the db currently has\n",
+    "cursor.close()\n",
+    "con.close()\n",
+    "\n",
+    "df = pd.DataFrame(out, columns=[\"ser\", \"cat\"])\n",
+    "\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
