--- a/db upload/Map upload/DataBase upload NB loss tracking.ipynb
+++ b/db upload/Map upload/DataBase upload NB loss tracking.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "[480 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,9 +325,159 @@
     "cursor.close()\n",
     "con.close()\n",
     "\n",
-    "df = pd.DataFrame(out, columns=[\"ser\", \"cat\"])\n",
+    "dfDB = pd.DataFrame(out, columns=[\"ser\", \"cat\"])\n",
     "\n",
-    "df"
+    "dfDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    & then lets compare the 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ser_Original</th>\n",
+       "      <th>combined_Original</th>\n",
+       "      <th>ser_DB</th>\n",
+       "      <th>cat_DB</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Agriculture</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Agricultural Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Agricultural Greenhouses</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Agricultural Greenhouses</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Aquaculture Equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Aquaculture Trap</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Aquaculture Trap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4591</th>\n",
+       "      <td>4592</td>\n",
+       "      <td>Truck Steering</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4592</th>\n",
+       "      <td>4593</td>\n",
+       "      <td>Truck Suspension</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4593</th>\n",
+       "      <td>4594</td>\n",
+       "      <td>Truck Tire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4594</th>\n",
+       "      <td>4595</td>\n",
+       "      <td>Truck Transmission</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4595</th>\n",
+       "      <td>4596</td>\n",
+       "      <td>Truck Wheel</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4596 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Ser_Original         combined_Original  ser_DB                    cat_DB\n",
+       "0                1               Agriculture     1.0               Agriculture\n",
+       "1                2    Agricultural Equipment     2.0    Agricultural Equipment\n",
+       "2                3  Agricultural Greenhouses     3.0  Agricultural Greenhouses\n",
+       "3                4     Aquaculture Equipment     4.0     Aquaculture Equipment\n",
+       "4                5          Aquaculture Trap     5.0          Aquaculture Trap\n",
+       "...            ...                       ...     ...                       ...\n",
+       "4591          4592            Truck Steering     NaN                       NaN\n",
+       "4592          4593          Truck Suspension     NaN                       NaN\n",
+       "4593          4594                Truck Tire     NaN                       NaN\n",
+       "4594          4595        Truck Transmission     NaN                       NaN\n",
+       "4595          4596               Truck Wheel     NaN                       NaN\n",
+       "\n",
+       "[4596 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfMerged = pd.concat([df.add_suffix('_Original'), dfDB.add_suffix('_DB')], axis=1)\n",
+    "\n",
+    "dfMerged"
    ]
   }
  ],
