--- a/db upload/Map upload/DataBase upload NB loss tracking.ipynb
+++ b/db upload/Map upload/DataBase upload NB loss tracking.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
        "59           Fresh Pomegranates  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1513,13 +1513,85 @@
        "179    Asia & Pacific Islands Clothing  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfMerged = dfMerged.iloc[120:500]; dfMerged.head(60)"
+    "dfMerged2 = dfMerged.iloc[120:500]; dfMerged2.head(60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Now lets try making a list of entries not going through"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1.,   2.,   3.,   4.,   5.,   6.,   7.,   8.,   9.,  10.,  11.,\n",
+       "        12.,  13.,  14.,  15.,  16.,  17.,  18.,  19.,  20.,  21.,  22.,\n",
+       "        23.,  24.,  25.,  26.,  27.,  28.,  29.,  30.,  31.,  32.,  33.,\n",
+       "        34.,  35.,  36.,  37.,  38.,  39.,  40.,  41.,  42.,  43.,  44.,\n",
+       "        45.,  46.,  47.,  48.,  49.,  50.,  51.,  52.,  53.,  54.,  55.,\n",
+       "        56.,  57.,  58.,  59.,  60.,  61.,  62.,  63.,  64.,  65.,  66.,\n",
+       "        67.,  68.,  69.,  70.,  71.,  72.,  73.,  74.,  75.,  76.,  77.,\n",
+       "        78.,  79.,  80.,  81.,  82.,  83.,  84.,  85.,  86.,  87.,  88.,\n",
+       "        89.,  90.,  91.,  92.,  93.,  94.,  95.,  96.,  97.,  98.,  99.,\n",
+       "       100., 101., 102., 103., 104., 105., 106., 107., 108., 109., 110.,\n",
+       "       111., 112., 113., 114., 115., 116., 117., 118., 119., 120., 121.,\n",
+       "       122., 123., 124., 125., 126., 127., 128., 129., 130., 131., 132.,\n",
+       "       133., 134., 135., 136., 137., 138., 139., 140., 141., 152., 153.,\n",
+       "       154., 155., 156., 157., 158., 159., 160., 161., 162., 163., 164.,\n",
+       "       165., 166., 167., 168., 169., 170., 171., 172., 173., 174., 175.,\n",
+       "       176., 177., 178., 179., 180., 181., 182., 183., 184., 185., 186.,\n",
+       "       187., 188., 189., 190., 191., 192., 193., 194., 195., 196., 197.,\n",
+       "       198., 199., 200., 201., 202., 203., 204., 205., 206., 207., 208.,\n",
+       "       209., 210., 211., 212., 213., 214., 215., 216., 217., 218., 219.,\n",
+       "       220., 221., 222., 223., 224., 225., 226., 227., 228., 229., 230.,\n",
+       "       231., 232., 233., 234., 235., 236., 237., 238., 239., 240., 241.,\n",
+       "       242., 243., 244., 245., 246., 247., 248., 249., 250., 251., 252.,\n",
+       "       253., 254., 255., 256., 257., 258., 259., 260., 261., 262., 263.,\n",
+       "       264., 265., 266., 267., 268., 269., 270., 271., 272., 273., 274.,\n",
+       "       275., 276., 277., 278., 279., 280., 281., 282., 283., 284., 285.,\n",
+       "       286., 287., 288., 289., 290., 291., 292., 293., 294., 295., 296.,\n",
+       "       297., 298., 299., 300., 301., 302., 303., 304., 305., 306., 307.,\n",
+       "       308., 309., 310., 311., 312., 313., 314., 315., 316., 317., 318.,\n",
+       "       319., 320., 321., 322., 323., 324., 325., 326., 327., 328., 329.,\n",
+       "       330., 331., 342., 343., 344., 345., 346., 347., 348., 349., 350.,\n",
+       "       351., 352., 353., 354., 355., 356., 357., 358., 359., 360., 361.,\n",
+       "       362., 363., 364., 365., 366., 367., 368., 369., 370., 371., 372.,\n",
+       "       373., 374., 375., 376., 377., 378., 379., 380., 381., 382., 383.,\n",
+       "       384., 385., 386., 387., 388., 389., 390., 391., 392., 393., 394.,\n",
+       "       395., 396., 397., 398., 399., 400., 401., 402., 403., 404., 405.,\n",
+       "       406., 407., 408., 409., 410., 411., 412., 413., 414., 415., 416.,\n",
+       "       417., 418., 419., 420., 421., 422., 423., 424., 425., 426., 427.,\n",
+       "       428., 429., 430., 431., 432., 433., 434., 435., 436., 437., 438.,\n",
+       "       439., 440., 441., 442., 443., 444., 445., 446., 447., 448., 449.,\n",
+       "       450., 451., 452., 453., 454., 455., 456., 457., 458., 459., 460.,\n",
+       "       461., 462., 463., 464., 465., 466., 467., 468., 469., 470., 471.,\n",
+       "       472., 473., 474., 475., 476., 477., 478., 479., 480., 481., 482.,\n",
+       "       483., 484., 485., 486., 487., 488., 489., 490., 491., 492., 493.,\n",
+       "       494., 495., 496., 497., 498., 499., 500.,  nan,  nan,  nan,  nan,\n",
+       "        nan,  nan,  nan,  nan,  nan,  nan,  nan,  nan,  nan,  nan,  nan,\n",
+       "        nan,  nan,  nan,  nan,  nan])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serDbArray = dfMerged['ser_DB'].to_numpy(); serDbArray"
    ]
   }
  ],
