--- a/db upload/Map upload/DataBase upload NB loss tracking.ipynb
+++ b/db upload/Map upload/DataBase upload NB loss tracking.ipynb
@@ -1996,6 +1996,39 @@
    "source": [
     "    Perfect, the next step is to cascade this to the whole dataset to find all entries & queries that didn't go through"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = psycopg2.connect(\n",
+    "    database=\"iSupply\",\n",
+    "    host=\"38.180.117.52\",\n",
+    "    user=\"postgres\",\n",
+    "    password=\"deerRun\",\n",
+    "    port=\"5432\",\n",
+    ")\n",
+    "cursor = con.cursor()\n",
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "out = cursor.fetchall()  # make a dictionary of what the db currently has\n",
+    "cursor.close()\n",
+    "con.close()\n",
+    "\n",
+    "dfDB = pd.DataFrame(out, columns=[\"ser\", \"cat\"])\n",
+    "\n",
+    "dfMerged = pd.concat([df.add_suffix('_Original'), dfDB.add_suffix('_DB')], axis=1)\n",
+    "dfMerged = dfMerged.iloc[:500]; dfMerged.head(60)\n",
+    "\n",
+    "dfMerged2 = dfMerged.iloc[120:500]; dfMerged2.head(60)\n",
+    "\n",
+    "serDbArray = dfMerged['ser_DB'].to_numpy()\n",
+    "\n",
+    "dfFiltered = dfMerged[~dfMerged['Ser_Original'].isin(serDbArray)].reset_index(drop=True); dfFiltered\n",
+    "\n",
+    "dfErrorList = dfFiltered[['Ser_Original', 'combined_Original']]; dfErrorList"
+   ]
   }
  ],
  "metadata": {
