--- a/db upload/Map upload/DataBase upload NB loss tracking.ipynb
+++ b/db upload/Map upload/DataBase upload NB loss tracking.ipynb
@@ -2003,31 +2003,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con = psycopg2.connect(\n",
-    "    database=\"iSupply\",\n",
-    "    host=\"38.180.117.52\",\n",
-    "    user=\"postgres\",\n",
-    "    password=\"deerRun\",\n",
-    "    port=\"5432\",\n",
-    ")\n",
-    "cursor = con.cursor()\n",
+    "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\" ); cursor = con.cursor()\n",
+    "\n",
     "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
     "out = cursor.fetchall()  # make a dictionary of what the db currently has\n",
-    "cursor.close()\n",
-    "con.close()\n",
     "\n",
-    "dfDB = pd.DataFrame(out, columns=[\"ser\", \"cat\"])\n",
+    "cursor.close(); con.close()\n",
     "\n",
-    "dfMerged = pd.concat([df.add_suffix('_Original'), dfDB.add_suffix('_DB')], axis=1)\n",
-    "dfMerged = dfMerged.iloc[:500]; dfMerged.head(60)\n",
+    "dfDB = pd.DataFrame(out, columns=[\"ser\", \"cat\"]) #make the df\n",
     "\n",
-    "dfMerged2 = dfMerged.iloc[120:500]; dfMerged2.head(60)\n",
+    "dfMerged = pd.concat([df.add_suffix('_Original'), dfDB.add_suffix('_DB')], axis=1) #merge the 2\n",
     "\n",
-    "serDbArray = dfMerged['ser_DB'].to_numpy()\n",
+    "serDbArray = dfMerged['ser_DB'].to_numpy() \n",
+    "dfFiltered = dfMerged[~dfMerged['Ser_Original'].isin(serDbArray)].reset_index(drop=True) #use the array to get rid of any confirmed entries\n",
     "\n",
-    "dfFiltered = dfMerged[~dfMerged['Ser_Original'].isin(serDbArray)].reset_index(drop=True); dfFiltered\n",
-    "\n",
-    "dfErrorList = dfFiltered[['Ser_Original', 'combined_Original']]; dfErrorList"
+    "dfErrorList = dfFiltered[['Ser_Original', 'combined_Original']]; dfErrorList #the relevant columns are now our error list"
    ]
   }
  ],
