--- a/db upload/Map upload/DataBase upload NB loss tracking.ipynb
+++ b/db upload/Map upload/DataBase upload NB loss tracking.ipynb
@@ -2003,6 +2003,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "con = psycopg2.connect(\n",
+    "    database=\"iSupply\",\n",
+    "    host=\"38.180.117.52\",\n",
+    "    user=\"postgres\",\n",
+    "    password=\"deerRun\",\n",
+    "    port=\"5432\",\n",
+    ")\n",
+    "cursor = con.cursor()  # open\n",
+    "\n",
+    "for i in range(45):  # full data\n",
+    "    currentQL = process_categories(df, cursor, con, (100 * i), ((100 * i) + 100))\n",
+    "    print(\"100 number \", (i + 1), \" done\")\n",
+    "\n",
+    "currentQL = process_categories(df, cursor, con, (4500), (4596))\n",
+    "print(\"100 number \", (46), \" done\")\n",
+    "\n",
+    "# cursor.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\" ); cursor = con.cursor()\n",
     "\n",
     "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
