--- a/db upload/Map upload/DataBase upload NB loss tracking.ipynb
+++ b/db upload/Map upload/DataBase upload NB loss tracking.ipynb
@@ -2019,7 +2019,7 @@
     "currentQL = process_categories(df, cursor, con, (4500), (4596))\n",
     "print(\"100 number \", (46), \" done\")\n",
     "\n",
-    "# cursor.close()"
+    "# cursor.close() # close in next section"
    ]
   },
   {
@@ -2028,12 +2028,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\" ); cursor = con.cursor()\n",
+    "# con = psycopg2.connect(database=\"iSupply\", host=\"38.180.117.52\", user=\"postgres\", password=\"deerRun\", port=\"5432\" ); cursor = con.cursor() #already open\n",
     "\n",
     "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
     "out = cursor.fetchall()  # make a dictionary of what the db currently has\n",
     "\n",
-    "cursor.close(); con.close()\n",
+    "cursor.close(); con.close() # now close\n",
     "\n",
     "dfDB = pd.DataFrame(out, columns=[\"ser\", \"cat\"]) #make the df\n",
     "\n",
