--- a/db upload/Map upload/DataBase upload NB loss tracking.ipynb
+++ b/db upload/Map upload/DataBase upload NB loss tracking.ipynb
@@ -2679,6 +2679,22 @@
     "\n",
     "dfErrorList = dfFiltered[['Ser_Original', 'combined_Original']]; dfErrorList #the relevant columns are now our error list"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Now lets save our work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel('errorLog.xlsx', index=False)\n"
+   ]
   }
  ],
  "metadata": {
